external-crates/move/crates/move-compiler/tests/move_2024/expansion/self_leading_access.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/expansion/self_leading_access.move:6:9
  │
6 │         foo::S()
  │         ^^^ Expected an address or module in this position, not a module member
